# intro-book

./: .gitignore  404.html  CLAUDE.md  FORAGE_ARC_RUST_VERIFICATION.md  LICENSE  LICENSE-APACHE-2.0  LICENSE-MIT  PLAN.md  README.md  book.toml  build.py  front_matter.html  index.html  nomenclature.html  print.html  pyproject.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-079a5064.js  searchindex-c31403f1.js  toc-d47fb4d7.js  toc.html
book/: SUMMARY.md  front_matter.md  nomenclature.md
code/: README.md
code/logger/: Cargo.toml
code/logger/src/: lib.rs
concepts/: dag.html  dag.md  glossary.html  glossary.md
tools/: audit_links.sh  crop_artwork.py  insert_artwork.py  read_html.py  read_pdf.py  render_dag.sh  render_pdf.py
trunk/: 01_the_machine_model.html  01_the_machine_model_solutions.html  02_numbers_and_how_they_fit.html  02_numbers_and_how_they_fit_solutions.html  03_the_vec_is_a_table.html  03_the_vec_is_a_table_solutions.html  04_cost_and_budget.html  04_cost_and_budget_solutions.html  05_identity_is_an_integer.html  05_identity_is_an_integer_solutions.html  06_a_row_is_a_tuple.html  06_a_row_is_a_tuple_solutions.html  07_structure_of_arrays.html  07_structure_of_arrays_solutions.html  08_where_theres_one_theres_many.html  08_where_theres_one_theres_many_solutions.html  09_sort_breaks_indices.html  09_sort_breaks_indices_solutions.html  10_stable_ids_and_generations.html  10_stable_ids_and_generations_solutions.html  11_the_tick.html  11_the_tick_solutions.html  12_event_time_vs_tick_time.html  12_event_time_vs_tick_time_solutions.html  (+89 more)
(+142 files in other folders)
